Correct overflow hidden bug

--- a/3M_configuration/css/page.css
+++ b/3M_configuration/css/page.css
@@ -180,6 +180,8 @@ html,body{
 #content{
     background-color: white;
     min-height: 70%;
+    display: flex;
+    flex-wrap: wrap;
 }
 .headerDropDown{
     /*    float:right;
@@ -274,6 +276,7 @@ html,body{
     padding-right: 0px; 
     padding-left: 0px;
     padding-bottom: 30px;
+    background-color: #F4F4F4;
 }
 
 #leftmenu .nav>li>a{
@@ -542,10 +545,10 @@ html,body{
 
 
 /* top row */
-.col .well{ 
+/*.col .well{ 
     margin-bottom: -99999px;
     padding-bottom: 99999px;  
-}
+}*/
 
 /* bottom row */
 .col-base{ 
@@ -555,14 +558,13 @@ html,body{
 
 
 
-.col-wrap{
+/*.col-wrap{
     overflow: hidden; 
-}
+}*/
 
 
 #leftWell{
     background-image: none;
-    background-color: #F4F4F4;
     padding-left: 0;
     padding-right: 0;
     border: none;
